# LightOnOCR

./: .gitignore  README.md  pyproject.toml  run_ocr.py
src/lightonocr/: run_ocr.py
